# Concept-Oriented-Programming-Framework

./: .afk-path  .gitignore  .gitmodules  .mcp.json  AGENTS.md  Archiecture and Implementation.md  CLAUDE.md  CODE_REVIEW_NOTES.md  COPF Deployment Layer — Architecture Extension.md  COPF Textual Interface Layer - Architecture Extension.md  COPF-REFERENCE.md  Clef Deployment Layer — Architecture Extension.md  GEMINI.md  GENERATION-KIT-IMPLEMENTATION-PLAN.md  GENERATION-SUITE-IMPLEMENTATION-PLAN.md  KERNEL-ANALYSIS.md  OPEN_QUESTIONS_REVIEW.md  PLAN-lenses.md  PLAN.md  bash.exe.stackdump  clef-generation-suite.md  clef-naming-reference.md  code-representation-coif-addendum.md  code-representation-design.md  code-representation-runtime-addendum.md  coif-spec-v4.md  copf-generation-kit.md  debug-test.ts  index.ts  package-lock.json  package.json  parse-check-mag723.ts  plan.md  project-instructions.ts  run-deploy.ts  test-connector-config.ts  test-manifest-parse.ts  test-sync-debug.ts  test-sync-routing.ts  tsconfig.json  (+4 more)
implementations/rust/: Cargo.toml
implementations/rust/src/: access_control.rs  alias.rs  article.rs  authentication.rs  authorization.rs  automation_rule.rs  backlink.rs  cache.rs  canvas.rs  classification_tag.rs  collaboration_flag.rs  collection.rs  comment_threaded.rs  component.rs  computation_token.rs  config_sync.rs  connector.rs  content_node.rs  content_parser.rs  content_storage.rs  control.rs  daily_note.rs  data_quality.rs  data_source.rs  display_mode.rs  echo.rs  enricher.rs  event_bus.rs  exposed_filter.rs  expression_language.rs  favorite.rs  file_management.rs  follow.rs  form_builder.rs  formula.rs  graph.rs  group.rs  intent.rs  jwt.rs  lib.rs  (+29 more)
sdks/python/: pyproject.toml
(+13159 files in other folders)
