[project]
name = "clef"
version = "0.1.0"
description = "Clef Python SDK — write concept handlers in Python"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
server = ["aiohttp>=3.9"]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
