[package]
name = "conduit-gtk"
version = "1.0.0"
edition = "2021"
description = "Conduit Example App -- GTK4 desktop frontend"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_12"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
glib = "0.19"
